@@ -47,7 +47,7 @@ namespace MCForge
 
             string FoundRank = Group.findPlayer(message.ToLower());
 
-            DataTable playerDb = MySQL.fillData("SELECT * FROM Players WHERE Name='" + message + "'");
+            DataTable playerDb = Server.useMySQL ? MySQL.fillData("SELECT * FROM Players WHERE Name='" + message + "'") : SQLite.fillData("SELECT * FROM Players WHERE Name='" + message + "'");
             if (playerDb.Rows.Count == 0) { Player.SendMessage(p, Group.Find(FoundRank).color + message + Server.DefaultColor + " has the rank of " + Group.Find(FoundRank).color + FoundRank); return; }
 
             Player.SendMessage(p, Group.Find(FoundRank).color + playerDb.Rows[0]["Title"] + " " + message + Server.DefaultColor + " has :");
